# Projekt-PC1-T

./: CMakeLists.txt  README.md  praceSeSoubory.cpp  praceSeSoubory.h  test_2048.cpp  test_2048.h  to_do.txt
test_2048/: praceSeSoubory.cpp  praceSeSoubory.h  test_2048.cpp  test_2048.h  to_do.txt
test_2048/test_2048/: CMakeLists.txt  praceSeSoubory.cpp  praceSeSoubory.h  test_2048.cpp
